map functionality added

--- a/src/game.html
+++ b/src/game.html
@@ -49,7 +49,7 @@
     <div id="INVENTORY">
         <div style="display: flex;justify-content:space-between;align-items:center;">
             <span>INVENTORY</span>
-            <span id="mapimg"><img src="./../Game Assets/map.png" height="40px" width="40px"></span>
+            <span id="mapicon"><img src="./../Game Assets/map.png" height="40px" width="40px"></span>
         </div>
         
         <ul id="item-list">
