game save and load functionality considered

--- a/src/game.html
+++ b/src/game.html
@@ -44,6 +44,11 @@
             Stamina - <span id="SPCount"></span>
             <div id="stamina-bar"></div>  <!--CSS CONTROLED STAMINA BAR-->
         </div>
+        <br>
+        <div id="saveDrive" style="display: flex;">
+            <img id="saveGame" src="./../Game Assets/save.png"  alt="">
+            <img id="loadGame" src="./../Game Assets/load.png"  alt="">
+        </div>
     </div>
 
     <div id="INVENTORY">
