--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="screen">
-        <img src="./Game Assets/title.jpg" alt="">
+        <img src="./Game-Assets/title.jpg" alt="">
         <div id="title">
             Eternia’s labyrinth <br>
             A pre-lude to Gia’s Grand Quest
