minor bugs fixed- local storage optimized

--- a/src/gameover.html
+++ b/src/gameover.html
@@ -12,10 +12,12 @@
             
             <h1>GAME OVER</h1>
             <br>
+            <h4 style="color: lime;text-align:center;">"<span id="endUserName"></span>"</h4>
+            <br>
             <h4 style="color: red;text-align:center;" id="playerMessage"></h4>
             <br>
             <br>
-            <h3>PROGRESSION : <br><br><span id="progressionNo">0</span> </h3>
+            <h3>PROGRESSION : <br><br><span id="progressionNo">0</span>% </h3>
             <br>
             <br>
             <p id="advice">"Caution in the face of the unknown is an invaluable ally on your quest. When delving into the mysteries that lie ahead, remember that the unfamiliar holds untold power and secrets beyond comprehension.”</p>
