--- a/src/game.html
+++ b/src/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EL:PLTGGQ</title>
+    <title>Eternia</title>
     <link rel="stylesheet" href="./game.css">
     <link rel="icon" href="./../Game-Assets/quest-icon.png" type="image/x-icon">
 </head>
